# llm-sft

./: .gitignore  Dockerfile  docker-compose.yaml  inference.py  metrics.ipynb  pyproject.toml  requirements.txt  ruff.toml  train.py
