[project]
name = "llm-sft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "openai>=1.99.3",
    "peft>=0.17.0",
    "torch>=2.8.0",
    "trackio>=0.2.3",
    "transformers>=4.55.0",
    "trl>=0.21.0",
    "unsloth>=2024.8",
]
